--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
       <footer id="contact">
         <a href="https://github.com/JasonxJiang" class="contact-col"><i class="big github icon"></i> jasonxjiang</a>
-        <div class="contact-col"><i class="large mail outline icon"></i> danielstop.ucla.edu</div>
+        <div class="contact-col"><i class="large mail outline icon"></i> jason.jiang.ucla.edu</div>
       </footer>
     </div> <!-- end pusher -->
 
